--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "mongoose": "^5.8.1",
     "nodemailer": "^6.4.2",
     "prop-types": "^15.7.2",
+    "qrcode.react": "^1.0.0",
     "query-string": "^6.9.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-google-login": "^5.0.7",
     "react-grecaptcha": "^1.2.5",
+    "react-print": "^1.3.1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
