--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-session": "^1.17.0",
     "mongodb": "^3.4.0",
     "mongoose": "^5.8.1",
+    "neuronex_mailer": "^0.1.0",
     "nodemailer": "^6.4.2",
     "prop-types": "^15.7.2",
     "qrcode.react": "^1.0.0",
