--- a/package.json
+++ b/package.json
@@ -1,39 +1,38 @@
 {
-  "name": "reviews-qr",
+  "name": "my-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.8.1",
-    "@material-ui/icons": "^4.5.1",
-    "@material-ui/lab": "^4.0.0-alpha.37",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.0",
-    "@testing-library/user-event": "^7.1.2",
-    "axios": "^0.19.0",
-    "bcrypt-nodejs": "0.0.3",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.0",
+    "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.19.0",
     "connect-mongo": "^3.2.0",
     "crypto": "^1.0.1",
     "express": "^4.17.1",
-    "express-session": "^1.17.0",
-    "mongodb": "^3.4.0",
-    "mongoose": "^5.8.1",
+    "express-session": "^1.17.1",
+    "mongoose": "^5.10.11",
     "neuronex_mailer": "^0.1.0",
-    "nodemailer": "^6.4.2",
     "prop-types": "^15.7.2",
     "qrcode.react": "^1.0.0",
-    "query-string": "^6.9.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-google-login": "^5.0.7",
+    "query-string": "^6.13.6",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-google-login": "^5.1.22",
     "react-grecaptcha": "^1.2.5",
     "react-print": "^1.3.1",
-    "react-redux": "^7.1.3",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
-    "redux": "^4.0.4",
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.0",
+    "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "unirest": "^0.6.0"
+    "unirest": "^0.6.0",
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -42,7 +41,10 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
